[tool.poetry]
name = "sansconverter"
version = "0.1.0"
description = "A converter for different Sanskrit transliteration systems"
authors = ["Kostiantyn Perun <kosperun@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
PyQt5 = "^5.15.7"
flake8 = "^5.0.4"
black = "^22.6.0"
pre-commit = "^2.20.0"
pylint = "^2.14.5"
ipython = "^8.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
