[tool.poetry]
name = "sansconverter"
version = "2.0"
description = "A converter for different Sanskrit transliteration systems"
authors = ["Kostiantyn Perun <kosperun@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PyQt6 = "^6.7.0"
pyqt6-qt6 = "^6.7.0"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
black = "^22.6.0"
pre-commit = "^2.20.0"
pylint = "^2.14.5"
ipython = "^8.4.0"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [".", "src"]
